Fix tabbed page overflow handling

--- a/client/src/views/Page/Page.css
+++ b/client/src/views/Page/Page.css
@@ -10,7 +10,7 @@
 }
 
 .tab-content {
-    height: calc(100% - 154px);
+    height: calc(100% - 42px);
     overflow-y: auto;
     overflow-x: auto;
 }
